clean up elements from new repo

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
 				<div class="box left-image">
 					<h3 id ="welcome-script">About Us</h3>
 				</div>
-				<p class="image-text">We are a full service CPA-owned business based in Wylie, TX and serving clients remotely across the U.S. <br/><br/>We operate with a transparent fixed-pricing model that we agree on based on your unique needs. Contracts are tailored to serve you however you need. We provide premium customer service and high quality work by a licensed CPA. Let us know how we can help you today!</p>
+				<div class="image-text">
+					<p>We are a full service CPA-owned business based in Wylie, TX and serving clients remotely across the U.S. <br/><br/>We operate with a transparent fixed-pricing model that we agree on based on your unique needs. Contracts are tailored to serve you however you need. We provide premium customer service and high quality work by a licensed CPA. Let us know how we can help you today!</p>
+				</div>
+				
 			</div>
 		
 
