--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 
 
-		<div class="services" >
+		<div class="services" id="services">
 <!-- 			<h3 class="fa-fade">How we can help</h3> -->
 			
 			<div class="service-list">
@@ -107,7 +107,7 @@
 		
 
 
-			<div class="about">
+			<div class="about" id="about">
 				<div class="box left-image">
 					<h3 id ="welcome-script">About Us</h3>
 				</div>
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 
-			<div class="contact">
+			<div class="contact" id="contact">
 				<div class="contact-form">
 					<form name = "Contact: MC Accounting" method="POST" action="POST" netlify data-netlify="true">
 						<div class="fields">
