work on seo meta tags and add alt image text

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
-	<title>MC Accounting and Bookkeeping, LLC</title>
+	<title>MC Accounting and Bookkeeping - serving your business today!</title>
 	<link rel="shortcut icon" type="image/png" href="logo4.png" />
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1 />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="MC Accounting and Bookkeeping, LLC is a full service CPA-owned firm serving small businesses across the U.S. We operate with transparent fixed-pricing to meet your unique needs." /> 
+	<og:title content="MC Accounting and Bookkeeping - serving your business today!" />
+	<og:description content="MC Accounting and Bookkeeping, LLC is a full service CPA-owned firm serving small businesses across the U.S." />
+	<og:url content="https://www.mcaccountingpro.com" />
+	<og:image content="https://www.mcaccountingpro.com/logo4.png" />
+
+	<meta name="keywords" content="Accounting, Bookkeeping, CPA, Small Business Accounting, Small Business Bookkeeping, Payroll, Bank Reconciliation, Monthly Reports, SALT Compliance, Chart of Accounts, Tax Compliance" />
 
 <!-- 		user-scalable=no" -->
 	<link rel="stylesheet" href="main.css" />
@@ -32,7 +34,7 @@
 			<label for="check" class="checkbtn">
 				<i class="fa fa-bars"></i>
 			</label>
-			<label class="navbar"><img class=logo src="logo4.png"> MC Accounting and Bookkeeping, LLC</label>
+			<label class="navbar"><img class=logo src="logo4.png" alt="MC Accounting and Bookkeeping logo"> MC Accounting and Bookkeeping, LLC</label>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#services">Services</a></li>
@@ -131,7 +133,7 @@
 
 	<div class="about">
 		<div class="left-image">
-			<img class="image" src="profile.jpg">
+			<img class="image" src="profile.jpg" alt="Maurilio Castorena, CPA">
 		</div>
 		<div class="image-text">
 			<h3>Meet our CPA!</h3>
