--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	</div>
 	<footer class="footer">
 		<p>info@mcaccountingpro.com</p>
-		<p>(940) 595-7458</p>
+		<p><a href="tel:+19405957458" class="phone-number">(940) 595-7458</a></p>		
 		<p>Wylie, TX</p>
 		<br />
 		<p>&copy; 2025 MC Accounting and Bookkeeping, LLC. All rights reserved.</p>
