make email clickable

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		</div>
 	</div>
 	<footer class="footer">
-		<p>info@mcaccountingpro.com</p>
+		<p><a href="mailto:info@mcaccountingpro.com" class="email-link">info@mcaccountingpro.com</a></p>
 		<p><a href="tel:+19405957458" class="phone-number">(940) 595-7458</a></p>		
 		<p>Wylie, TX</p>
 		<br />
