move the services section down and make some language edits

--- a/index.html
+++ b/index.html
@@ -64,6 +64,53 @@
 				business succeed!</h3>
 		</div>
 
+	
+		
+	<div class="about" id="about">
+		<div class="box left-image">
+			<h3 id="welcome-script">About Us</h3>
+		</div>
+		<div class="image-text">
+			<h1>Reliable and personalized service for businesses at every stage of growth</h1>
+			<br/>
+			<p>A full service CPA-owned business based in Texas, we serve clients nationwide to keep small business owners 
+				financially confident, compliant, and focused on growth.
+				<br /><br />We operate with a transparent fixed-pricing model that we agree on based on your unique
+				needs. Contracts are tailored to serve you however you need. We provide premium customer service and
+				high quality work by a licensed CPA. Let us know how we can help you today!
+			</p>
+		</div>
+
+	</div>
+
+		<div class="about">
+		<div class="left-image">
+			<img class="image" src="profile.jpg" alt="Maurilio Castorena, CPA">
+		</div>
+		<div class="image-text">
+			<h3>Meet our CPA!</h3>
+			<h2>From soloentrepreneurs just starting out to property management companies overseeing 17 million in rental revenue, 
+				Maurilio is ready to serve your needs. As a licensed CPA, 
+				Maurilio has deep accounting knowledge and large scale accounting experience. </h2>
+			<br />
+			<p>Maurilio received his degree in Accounting from TCU and completed Masters level
+				courses at University of Texas at Dallas. As he completed the CPA
+				exams, Maurilio worked as an Accountant for The Medve Group, a property management company with
+				multi-family communities spanning six states. <br/> <br/> From there he took a position as Senior Staff Accountant
+				at McLane Company, a food distribution company running $50 billion in gross revenue. As he grew in his career and skills, 
+				Maurilio made a move to K Hovnanian homes where he managed large scale accounting operations. </p>
+			<br />
+			<p>During this time, he helped a local Fort Worth business clean up their books and his passion to serve
+				small businesses was born. He started laying the foundation for his own business and MC Accounting and
+				Bookkeeping, LLC was formally established in 2019! </p>
+			<br />
+			<p>Maurilio strives to provide the greatest service to his clients and stay on top of the accounting
+				industry trends and regulations. From State and Local Tax Compliance to closing journal entries and
+				other period reports, Maurilio's experience has culminated in the ability to dive deep into the
+				accounting of businesses of various sizes across several industries. </p>
+			<!-- <p>He is an active member of the <a href="https://www.tx.cpa/" target="blank">Texas Society of CPAs</a> and most recently attend the 2022 QuickBooks Connect conference in Las Vegas.</p> -->
+		</div>
+	</div>
 
 		<div class="services" id="services">
 			<!-- 			<h3 class="fa-fade">How we can help</h3> -->
@@ -128,49 +175,6 @@
 		</div>
 	</div>
 
-
-
-	<div class="about" id="about">
-		<div class="box left-image">
-			<h3 id="welcome-script">About Us</h3>
-		</div>
-		<div class="image-text">
-			<p>We are a full service CPA-owned business based in Wylie, TX and serving clients remotely across the U.S.
-				<br /><br />We operate with a transparent fixed-pricing model that we agree on based on your unique
-				needs. Contracts are tailored to serve you however you need. We provide premium customer service and
-				high quality work by a licensed CPA. Let us know how we can help you today!
-			</p>
-		</div>
-
-	</div>
-
-
-	<div class="about">
-		<div class="left-image">
-			<img class="image" src="profile.jpg" alt="Maurilio Castorena, CPA">
-		</div>
-		<div class="image-text">
-			<h3>Meet our CPA!</h3>
-			<p>Maurilio's expertise is exactly what you need for your books! As a licensed CPA, Maurilio has deep
-				accounting knowledge and 10 years of accounting experience across multiple industries. </p>
-			<br />
-			<p>Maurilio received his degree in Accounting from Texas Christian University and completed Masters level
-				courses at University of Texas at Dallas to be eligible for the CPA license. As he completed the CPA
-				exams, Maurilio worked as an Accountant for The Medve Group, a property management company with
-				multi-family communities spanning six states. From there he took a position as Senior Staff Accountant
-				at McLane Company, a food distribution company running $50 billion in gross revenue. </p>
-			<br />
-			<p>During this time, he helped a local Fort Worth business clean up their books and his passion to serve
-				small businesses was born. He started laying the foundation for his own business and MC Accounting and
-				Bookkeeping, LLC was born! </p>
-			<br />
-			<p>Maurilio strives to provide the greatest service to his clients and stay on top of the accounting
-				industry trends and regulations. From State and Local Tax Compliance to closing journal entries and
-				other period reports, Maurilio's experience has culminated in the ability to dive deep into the
-				accounting of businesses of various sizes across several industries. </p>
-			<!-- <p>He is an active member of the <a href="https://www.tx.cpa/" target="blank">Texas Society of CPAs</a> and most recently attend the 2022 QuickBooks Connect conference in Las Vegas.</p> -->
-		</div>
-	</div>
 
 	<div class="contact" id="contact">
 		<div class="contact-form">
