clean up font, start more things for about us

--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
 				needs. Contracts are tailored to serve you however you need. We provide premium customer service and
 				high quality work by a licensed CPA. Let us know how we can help you today!
 			</p>
+
+			<!-- <br/>
+			<br/>
+			<h1>Who We Work With</h1>
+
+			<p>We specialize in supporting: </p>
+			<br />
+			<ul>
+				<li> Service-based small businesses</li>
+				<li> Entrepreneurs launching new ventures</li>
+				<li> Growing businesses needing accurate financial reporting</li>
+			</ul>
+			<br />
+			<p>Whether you are just getting started or scaling your operations, we offer clear, 
+				responsive, and personalized accounting support—without the overwhelm.</p> -->
 		</div>
 
 	</div>
