--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<div class="service-list">
 
 				<div class="service-container">
-					<i class="icon fa-solid fa-book fa-spin-pulse"></i>
+					<i class="icon fa-solid fa-book "></i>
 					<a href="https://www.google.com" target="blank">
 						<div class="service-text">
 							<h4>Bookkeeping</h4>
@@ -144,7 +144,7 @@
 			</div>
 
 			<div class="service-container">
-				<i class="icon fa-solid fa-scale-balanced fa-spin-pulse"></i>
+				<i class="icon fa-solid fa-scale-balanced "></i>
 				<div class="service-text">
 					<h4>Bank Reconciliation</h4>
 					<p>Reconciliation of all banks, credit cards, and loans on a monthly basis.</p>
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class="service-container">
-				<i class="icon fa-solid fa-file-pdf fa-spin-pulse"></i>
+				<i class="icon fa-solid fa-file-pdf "></i>
 				<div class="service-text">
 					<h4> Monthly Reports</h4>
 					<p>Profit and Loss Statements, Monthly Depreciation of Fixed Assets, Review of A/R, A/P, Inventory
@@ -162,7 +162,7 @@
 
 
 			<div class="service-container">
-				<i class="icon fa-solid fa-flag-usa fa-spin-pulse"></i>
+				<i class="icon fa-solid fa-flag-usa"></i>
 				<div class="service-text">
 					<h4>SALT Compliance</h4>
 					<p>Process and Manage Sales Tax and Other State and Local Tax Compliance.</p>
@@ -170,7 +170,7 @@
 			</div>
 
 			<div class="service-container">
-				<i class="icon fa-regular fa-address-book fa-spin-pulse"></i>
+				<i class="icon fa-regular fa-address-book"></i>
 
 				<div class="service-text">
 					<h4>Chart of Accounts</h4>
@@ -179,7 +179,7 @@
 			</div>
 
 			<div class="service-container">
-				<i class="icon fa-solid fa-sack-dollar fa-spin-pulse"></i>
+				<i class="icon fa-solid fa-sack-dollar"></i>
 				<div class="service-text">
 					<h4>Employee Payrolls</h4>
 					<p>Process and Manage Payroll and Payroll Tax Compliance.</p>
