remove link to google

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 				<div class="service-container">
 					<i class="icon fa-solid fa-book "></i>
-					<a href="https://www.google.com" target="blank">
+					<!-- <a href="https://www.google.com" target="blank"> -->
 						<div class="service-text">
 							<h4>Bookkeeping</h4>
 							<p>Forecasting, Budgeting, and Strategic Planning to help your business grow.</p>
