Clean up styling, brighten up the header, add some titles to about section, services and contact form

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 
 
 		<div class="header">
-			<h2 class="fade-in">Let the professionals take over.</h2>
-			<h3 class="fade-in-long">With over 10 years of accounting experience,<br /> we are here to help your small
-				business succeed!</h3>
+			<h2 class="fade-in">Let the professionals handle it. </h2>
+			<!-- <h3 class="fade-in-long">With over 10 years of accounting experience, we are here to help your small
+				business succeed!</h3> -->
+			<h3 class="fade-in-long">Expert Accounting & Bookkeeping for Small Businesses — Fixed Pricing, Personalized Service.</h3>
 		</div>
 
 	
@@ -97,13 +98,16 @@
 		</div>
 
 	</div>
+	<div class="title">
+		<h3>Meet our CPA!</h3>
+	</div>
 
 		<div class="about">
 		<div class="left-image">
 			<img class="image" src="profile.jpg" alt="Maurilio Castorena, CPA">
 		</div>
 		<div class="image-text">
-			<h3>Meet our CPA!</h3>
+			<!-- <h3>Meet our CPA!</h3> -->
 			<h2>From soloentrepreneurs just starting out to property management companies overseeing 17 million in rental revenue, 
 				Maurilio is ready to serve your needs. As a licensed CPA, 
 				Maurilio has deep accounting knowledge and large scale accounting experience. </h2>
@@ -125,6 +129,10 @@
 				accounting of businesses of various sizes across several industries. </p>
 			<!-- <p>He is an active member of the <a href="https://www.tx.cpa/" target="blank">Texas Society of CPAs</a> and most recently attend the 2022 QuickBooks Connect conference in Las Vegas.</p> -->
 		</div>
+	</div>
+
+	<div class="title">
+		<h3>Our Services</h3>
 	</div>
 
 		<div class="services" id="services">
@@ -190,6 +198,9 @@
 		</div>
 	</div>
 
+	<div class="title">
+		<h3>Get in touch!</h3>
+	</div>
 
 	<div class="contact" id="contact">
 		<div class="contact-form">
