--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 	<title>MC Accounting and Bookkeeping - serving your business today!</title>
@@ -74,7 +74,7 @@
 		<div class="image-text">
 			<h1>Reliable and personalized service for businesses at every stage of growth</h1>
 			<br/>
-			<p>A full service CPA-owned business based in Texas, we serve clients nationwide to keep small business owners 
+			<p>A full service business based in Wylie, Texas, MC Accounting and Bookkeeping serves clients nationwide to keep small business owners 
 				financially confident, compliant, and focused on growth.
 				<br /><br />We operate with a transparent fixed-pricing model that we agree on based on your unique
 				needs. Contracts are tailored to serve you however you need. We provide premium customer service and
@@ -107,7 +107,6 @@
 			<img class="image" src="profile.jpg" alt="Maurilio Castorena, CPA">
 		</div>
 		<div class="image-text">
-			<!-- <h3>Meet our CPA!</h3> -->
 			<h2>From soloentrepreneurs just starting out to property management companies overseeing 17 million in rental revenue, 
 				Maurilio is ready to serve your needs. As a licensed CPA, 
 				Maurilio has deep accounting knowledge and large scale accounting experience. </h2>
