--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<title>MC Accounting and Bookkeeping - serving your business today!</title>
 	<link rel="shortcut icon" type="image/png" href="logo4.png" />
+	<link rel="apple-touch-icon" href="/logo4.png" />
+	<link rel="icon" type="image/png" href="logo4.png" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="MC Accounting and Bookkeeping, LLC is a full service CPA-owned firm serving small businesses across the U.S. We operate with transparent fixed-pricing to meet your unique needs." /> 
