--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" href="logo4.png" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="MC Accounting and Bookkeeping, LLC is a full service CPA-owned firm serving small businesses across the U.S. We operate with transparent fixed-pricing to meet your unique needs." /> 
+	<meta name="description" content="MC Accounting and Bookkeeping, LLC is a full service firm serving small businesses nationwide." /> 
 	<og:title content="MC Accounting and Bookkeeping - serving your business today!" />
 	<og:description content="MC Accounting and Bookkeeping, LLC is a full service CPA-owned firm serving small businesses across the U.S." />
 	<og:url content="https://www.mcaccountingpro.com" />
@@ -78,8 +78,7 @@
 			<br/>
 			<p>A full service business based in Wylie, Texas, MC Accounting and Bookkeeping serves clients nationwide to keep small business owners 
 				financially confident, compliant, and focused on growth.
-				<br /><br />We operate with a transparent fixed-pricing model that we agree on based on your unique
-				needs. Contracts are tailored to serve you however you need. We provide premium customer service and
+				<br /><br />We operate with a transparent fixed-pricing model, offering you reliable and personalized service. Contracts are tailored to serve you however you need. We provide premium customer service and
 				high quality work by a licensed CPA. Let us know how we can help you today!
 			</p>
 
