add reviews section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@
 		</div>
 
 	</div>
+
+
+	<div class="title">
+		<h3>Hear what our clients have to say!</h3>
+	</div>
+
+	<div class="reviews">
+	
+
+		<div class="review-box">
+			<p>"Maurilio is the absolute best accountant out there. His work is very thorough and 
+				comprehensive and he is very easy to work with. It was so helpful to see all of our books 
+				in order and filing taxes was a breeze with his organized accounting of all finances. Highly recommend!!!"</p>
+				</br>
+
+			<h4>- Jinx Merlot Pet Grooming</h4>
+		</div>
+
+		<div class="review-box">
+			<p>"After working with various other accountants, I found MC Accounting and Bookkeeping. 
+				5 Stars is not enough. Maurillo is an exceptional Accountant who knows QBooks. 
+				He is thoughtful and gets our books managed monthly and on time. 
+				He now has both our companies books. Thank you for all you do!!! You don't need to look anywhere else!"</p>
+				</br>
+
+			<h4>- Linda Gardner</h4>
+		</div>
+
+		<div class="review-box">
+			<p>"Maurilio did a great job for me. From going back in my accounts for several years and cleaning up my books 
+				to the monthly preparation of my financials. He gave me incredible service and I highly recommend him."</p>
+			</br>
+			<h4>- Gerard Bushnell</h4>
+		</div>	
+
+		<!-- <div class="review-box">
+			<p>"I was looking for some accounting help and Maurilio with MC Accounting and Bookkeeping responded to my inquiry. 
+				Maurilio was able get my books in order for the previous year and set me up for the next calendar year also. 
+				He provided me with concise spreadsheets and we communicated via phone, email and text in a seamless way. 
+				This was important as he was in Texas and I was in Washington! The distance was never a problem. I highly recommend 
+				Maurilio for your accounting needs."</p>
+			<h4>- Mark Duncan</h4>
+		</div> -->
+	</div>
+
 	<div class="title">
 		<h3>Meet our CPA!</h3>
 	</div>
